# ChangeLog for sys-apps/calculate-builder
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-builder-2.2.16-r2 (17 Jun 2011)

  17 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-builder-2.2.16-r1.ebuild, +calculate-builder-2.2.16-r2.ebuild,
  files/calculate-builder-2.2.16-fix_dev.patch:
  Fix creating dev nodes.

*calculate-builder-2.2.16-r1 (17 Jun 2011)

  17 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-builder-2.2.16-r1.ebuild,
  +files/calculate-builder-2.2.16-fix_dev.patch:
  Update for bugfix.

  09 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-builder-2.2.13.ebuild, -calculate-builder-2.2.14.ebuild,
  -calculate-builder-2.2.14-r1.ebuild, -calculate-builder-2.2.14-r2.ebuild,
  -calculate-builder-2.2.14-r3.ebuild,
  -files/calculate-builder-2.2.14-backport.patch,
  -files/calculate-builder-2.2.14-fix_convert.patch,
  -files/calculate-builder-2.2.14-fix_create_iso.patch,
  +calculate-builder-2.2.16.ebuild:
  Remove old

*calculate-builder-2.2.16 (09 Jun 2011)

  09 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-builder-2.2.16.ebuild:
  Bump version

*calculate-builder-2.2.15 (18 May 2011)

  18 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-builder-2.2.15.ebuild:
  Bump version

*calculate-builder-2.2.14-r3 (22 Apr 2011)

  22 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-builder-2.2.14-r3.ebuild,
  +files/calculate-builder-2.2.14-fix_create_iso.patch:
  Update for fix create iso.

*calculate-builder-2.2.14-r1 (21 Apr 2011)

  21 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-builder-2.2.14-r1.ebuild,
  +files/calculate-builder-2.2.14-fix_convert.patch:
  Update for bugfix.

*calculate-builder-2.2.14 (20 Apr 2011)

  20 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-builder-2.2.14.ebuild:
  Bump version
