@@ -1,9 +1,9 @@
-AUX calculate-builder-2.2.16-fix_dev.patch 1572 RMD160 643af0bd43af8bde933aaea741f385912fd89057 SHA1 ead6546b88380a2bda23689e001050a9af8cae58 SHA256 51600b00fe0c1e2898f1fa8ad2ad9ca2cdbb666f6e214b28996180b0e3205121
+AUX calculate-builder-2.2.16-fix_dev.patch 1654 RMD160 8c9bc2926fc14205b03a2586bf8c8a4c0888be7a SHA1 54f99c7be9237b47339b0e5ff8dc71bc48d96861 SHA256 02542f0e57c31646c9c2af10e979a0ca9a601ed164ad35a55907fd5e5aad505d
 DIST calculate-builder-2.2.15.tar.bz2 30600 RMD160 1da2f1970fd12aace22f78dff823c4771fb13a69 SHA1 40ce72b6291b1f984e379f23ee295d3f8e18f899 SHA256 205de785e0aea0a934ad6438d99d898f61466bfe2d02a65e835cdca0fbb48017
 DIST calculate-builder-2.2.16.tar.bz2 30689 RMD160 f248f584010ff15c025026aa0f6fac901843d74f SHA1 e9253b493966a961352b9d80b109ae58c23bdd6f SHA256 f418a1312ac3f85e0dcf1bf5d545c88e21ce33e301ad7a614fc69fe7037891eb
 EBUILD calculate-builder-2.2.15.ebuild 590 RMD160 b64ca13e863536e1090fc6da28a50d6f84fd2cbd SHA1 56ad8f5017db61fb07eaa7a71ac5808f4011f1de SHA256 76fbb1ec89ed53777a5def347c96ad4c175f5cb54c8f1260bc4f1e11f4356610
-EBUILD calculate-builder-2.2.16-r2.ebuild 717 RMD160 90334d713224c41e880eb3c44a6310008bd492aa SHA1 b8ecbad24e35cabee388bfe90f58bdb80ee52e45 SHA256 00986e27ae3e2f539107630ec8e9491046d454dce0bd9066add57299e0071224
+EBUILD calculate-builder-2.2.16-r3.ebuild 717 RMD160 90334d713224c41e880eb3c44a6310008bd492aa SHA1 b8ecbad24e35cabee388bfe90f58bdb80ee52e45 SHA256 00986e27ae3e2f539107630ec8e9491046d454dce0bd9066add57299e0071224
 EBUILD calculate-builder-2.2.16.ebuild 590 RMD160 357196f9e6ddebe89f15f45e1af9395127bb7855 SHA1 174d2e07112bfa3c19e4cd7d91f1b3ddff89fd81 SHA256 8040fa1928e6c7d4933a6e2f76a171c72e87d10bd4521656f96c19e96984da75
 EBUILD calculate-builder-2.2.9999.ebuild 555 RMD160 e803b87aed06b8f08e2637e10213a0d81ba3ba0b SHA1 3ed908155f477cfa91155420d4fae903ce8db1da SHA256 fd6326f73e68d91f476498db381f2af62e742e3c461b609a8eb379dc417e1470
-MISC ChangeLog 13770 RMD160 f75544e169b8fd1ce2fe0ea7c4ede85b8325f806 SHA1 f7152a48b747de9bab2598ea6d660f1ce10638a1 SHA256 6cfd41394b496f3537abc924e0c7bf07c33778c47afdedae8dff6c0427288a47
+MISC ChangeLog 14039 RMD160 83163195eed02f17bfb35df24fece16906f49728 SHA1 81bcda97524e2819cc5d94cc5de9dee72a3a470d SHA256 73521a3645dd91b4a521dd121717fa3b8c8e5eae0cc9b8be1314ea0e41a129cd
 MISC metadata.xml 270 RMD160 b5ff308a82cd6e594c2f04731cdbe9f80a945042 SHA1 58dbf7eb15bb2e6c6c8514f483e51dfacd1c62e9 SHA256 b65e150429ecbf36cf03d094f4e3e7518f536c61289cecff6b817326703d58a0
