@@ -1,11 +1,11 @@
-commit d6eed11052fa4954f6164789856cac6452b0eb99
+commit 6f839d94a0b8efc53d460ed2f3e8c7bdb7ecc388
 Author: Mike Hiretsky <mh@calculate.ru>
 Date:   Fri Jun 17 12:12:54 2011 +0400
 
     Create nodes for dev http://dev.gentoo.org/~a3li/openrc.txt.
 
 diff --git a/pym/cl_builder.py b/pym/cl_builder.py
-index 6ec85ea..ea6fe6f 100644
+index 6ec85ea..8a1d2a9 100644
 --- a/pym/cl_builder.py
 +++ b/pym/cl_builder.py
 @@ -18,6 +18,7 @@ __version__ = "2.2.16"
@@ -16,22 +16,24 @@ index 6ec85ea..ea6fe6f 100644
  import re
  import sys
  import traceback
-@@ -103,6 +104,14 @@ class cl_builder(color_print):
+@@ -103,6 +104,16 @@ class cl_builder(color_print):
          self.clVars.importBuilder()
          self.clVars.flIniFile()
  
 +    def createDevNodes(self,directory):
 +        """Create nodes for dev http://dev.gentoo.org/~a3li/openrc.txt"""
 +        devPath = path.join(directory,"dev")
-+        for node,mode,major,minor in [("console",0600|stat.S_IFCHR,5,1),
-+                                      ("null",0666|stat.S_IFCHR,1,3),
-+                                      ("zero",0666|stat.S_IFCHR,1,5)]:
-+            os.mknod(path.join(devPath,node),mode,os.makedev(major,minor))
++        for node,mode,dmode,major,minor in [("console",0600,stat.S_IFCHR,5,1),
++                                      ("null",0666,stat.S_IFCHR,1,3),
++                                      ("zero",0666,stat.S_IFCHR,1,5)]:
++            nodePath = path.join(devPath,node)
++            os.mknod(nodePath,mode|dmode,os.makedev(major,minor))
++            os.chmod(nodePath,mode)
 +
      def applyTemplatesForSquash(self,directory):
          """Apply templates for root of system."""
          #self.clVars.Set("cl_root_path","/", True)
-@@ -110,6 +119,7 @@ class cl_builder(color_print):
+@@ -110,6 +121,7 @@ class cl_builder(color_print):
          self.clVars.Set("cl_chroot_path",directory, True)
          self.clTempl = template(self.clVars)
          dirsFiles = self.clTempl.applyTemplates()
