@@ -11,6 +11,7 @@ EBUILD calculate-utilities-2.2.16-r1.ebuild 832 RMD160 9be3baed52d490886fa38f80e
 EBUILD calculate-utilities-2.2.16-r2.ebuild 832 RMD160 4826ccde3d7b32d4d2759b97e1458bb06cb18c70 SHA1 518d1dcb131969c105677a7cc466dc9183c6a8e3 SHA256 278a8b98d18a248baba4bafeeab897c3aa8ec8e415338845fa8df1e9d0a044b1
 EBUILD calculate-utilities-2.2.16-r3.ebuild 835 RMD160 f84cb05a48401db24066b12fd6072f4be9e10288 SHA1 c5acff3b7797bca438ec15389f5cb4fcaf4544a2 SHA256 23d33632597256283de090fea72a29ff365a438572d28c97238963f43af4f23e
 EBUILD calculate-utilities-2.2.16-r5.ebuild 838 RMD160 9845d647992a22ae7f2f2820d02618b899b411ab SHA1 cc474c09d0c063700a6df558d38ca4e1df55db5b SHA256 904dab1a4523ba775678a018801fdfe86239d816b83c680c05d5c280daef886f
+EBUILD calculate-utilities-2.2.16-r6.ebuild 838 RMD160 bfb8ec8683ad8b4f6fea90f423ae75a07e3a18ff SHA1 e03bceedf7a857f5b94bd0d73b619d0772334fa7 SHA256 fa0ad9c9b54fd18e71c584d1de688beb42e559d4029de4dff92d600e43022152
 EBUILD calculate-utilities-2.2.16.ebuild 829 RMD160 dee34889a7f8ab23011ca57685573d0c3b7ba2ef SHA1 e2dcd703f0045e6d8c5647c131c0a72f7d03a9b0 SHA256 f2666edf4ce390eeea6cfc5f3750742a93b861ad1f431aac9ec2c6eeefbf3af7
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 11523 RMD160 63582b438ef5592c979e3ed4411f3cd693b26162 SHA1 bbccb4a68626f87d38fd2ca9e86c59efa7329d1c SHA256 db47a85cb70965b91c71104abd449ddb12de71d1872df2efd4d420bc0ae4a541
+MISC ChangeLog 11703 RMD160 6a69a081c9c4802737bed1bf5dca8dbe1c81b1ac SHA1 35040b48552a8542edfc72b6c0d41899176cfc92 SHA256 7322c612d6fe2e69cefb749f9c8ef78c35c5daf581599d063a36ac03510842b3
