@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.16-r6 (17 Jun 2011)
+
+  17 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.16-r6.ebuild:
+  Update for calculate-builder.
+
 *calculate-utilities-2.2.16-r5 (17 Jun 2011)
 
   17 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
