@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-builder-2.2.16-r3 (17 Jun 2011)
+
+  17 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-builder-2.2.16-r2.ebuild, +calculate-builder-2.2.16-r3.ebuild,
+  files/calculate-builder-2.2.16-fix_dev.patch:
+  Update for fix mode of created nodes.
+
 *calculate-builder-2.2.16-r2 (17 Jun 2011)
 
   17 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
